Completed the first part

--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
       <button id="btn2"><a href="#"> LET'S GET STARTED</a></button>
 
       <div class="bgimg">
-        <img src="group.jpg" alt="">
+        <img src="group.png" alt="">
+      </div>
+
+      <div class="statistics">
+        <img src="Statistics.png" alt="" srcset="">
       </div>
     </div>
 </body>
