--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Figma Clone</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="header">
       <!-- <div class="logo">
       </div> -->
-      
+
       <div class="navbar">
-        <img src="logo_3_1-removebg-preview 1.png" alt="">
+        <img src="logo_3_1-removebg-preview 1.png" alt="" />
         <ul>
           <li>About Us</li>
           <li>Services</li>
@@ -24,21 +24,153 @@
         </ul>
         <button id="btn1"><a href="#"> JOIN WAITING LIST</a></button>
       </div>
-      
+
       <div class="content">
-        <h1>Nigeria logistics <br> simplified</h1>
-        <p>We make shipping fast and easy through air freight <br> Logistics at affordable prices.</p>
+        <h1>
+          Nigeria logistics <br />
+          simplified
+        </h1>
+        <p>
+          We make shipping fast and easy through air freight <br />
+          Logistics at affordable prices.
+        </p>
       </div>
 
       <button id="btn2"><a href="#"> LET'S GET STARTED</a></button>
 
       <div class="bgimg">
-        <img src="group.png" alt="">
+        <img src="_Group_ (9) 1 (1).png" alt="" />
       </div>
 
       <div class="statistics">
-        <img src="Statistics.png" alt="" srcset="">
+        <img src="approval 2.png" alt="" />
+        <div>
+          <h2>10000+</h2>
+          <p>Fast Delivery</p>
+        </div>
+        <div class="vl"></div>
+        <img src="Group1.png" alt="" />
+        <div>
+          <h2>150+</h2>
+          <p>Happy customers</p>
+        </div>
+        <div class="vl"></div>
+        <img src="locator 1.png" alt="" />
+        <div>
+          <h2>100+</h2>
+          <p>Nationwide Reach</p>
+        </div>
       </div>
     </div>
-</body>
+
+    <!--next section-->
+
+    <div class="container">
+      <!--video-->
+      <div>
+        <img src="Group 7.png" alt="" />
+      </div>
+      <!--Right Part-->
+      <div class="mark">
+        <div>
+          <h1>
+            Why You Should<br />
+            Choose us?
+          </h1>
+        </div>
+
+        <div>
+          <div>
+            <div class="icon">
+              <img
+                style="
+                  width: 20px;
+                  height: 20px;
+                  margin-right: 5px;
+                  margin-top: 27px;
+                "
+                src="Shape.png"
+                alt=""
+              />Speed
+            </div>
+            <p
+              style="
+                font-family: 'Rubik';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 14px;
+                line-height: 28px;
+              "
+            >
+              Fastest logistics company servicing Nigerian community.<br />
+              We deliver within 1 week.
+            </p>
+          </div>
+          <div>
+            <div class="icon">
+              <img
+                style="width: 20px; height: 20px; margin-right: 5px"
+                src="Shape.png"
+                alt=""
+              />Prcing
+            </div>
+            <p
+              style="
+                font-family: 'Rubik';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 14px;
+                line-height: 28px;
+              "
+            >
+              We provide competitive pricing while moving twice as fast<br />
+              as our competitors.
+            </p>
+          </div>
+          <div>
+            <div class="icon">
+              <img
+                style="width: 20px; height: 20px; margin-right: 5px"
+                src="Shape.png"
+                alt=""
+              />Customer service
+            </div>
+            <p
+              style="
+                font-family: 'Rubik';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 14px;
+                line-height: 28px;
+              "
+            >
+              We pay attention to our customers' needs and work <br />
+              tirelessly to meet them.
+            </p>
+          </div>
+          <div>
+            <div class="icon">
+              <img
+                style="width: 20px; height: 20px; margin-right: 5px"
+                src="Shape.png"
+                alt=""
+              />Special Prices for Wholesaler
+            </div>
+            <p
+              style="
+                font-family: 'Rubik';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 14px;
+                line-height: 28px;
+              "
+            >
+              We offer pocket-friendly rates for Clients who ship item in<br />
+              bulk with us.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
