Added Services Part

--- a/index.html
+++ b/index.html
@@ -172,5 +172,58 @@
         </div>
       </div>
     </div>
+    <!--Why You shoud chose us ends-->
+    <!--Services Part Begins-->
+    <div class="services">
+      <p class="bold">Services</p>
+      <p class="subject">
+        We offer outstanding services on time,everytime at affordable rates.
+      </p>
+    </div>
+    <br /><br />
+    <!--Service Cards-->
+    <div class="cards">
+      <div class="card1">
+        <br />
+        <img class="card1img" src="Group.png" />
+        <p class="def1">
+          <br />
+          Shipping to United States
+        </p>
+        <p class="subscript">
+          <br />
+          We ship to the United State from Lagos,Nigeria within 7 to 12 working
+          days.
+        </p>
+      </div>
+      <div class="card2">
+        <br />
+        <img class="card2img" src="XMLID_644_.png" />
+        <div class="def2">
+          <br />
+          Shipping to Nigeria
+        </div>
+        <div class="subscript">
+          <br />
+          We ship to the United State from Lagos,Nigeria within 7 to 12 working
+          days.
+        </div>
+      </div>
+      <div class="card3">
+        <br />
+        <img class="card3img" src="Group (1).png" />
+        <div class="def3">
+          <br />
+          Procurement
+        </div>
+        <p class="subscript">
+          <br />
+          Transform ypur proucts acquisition process. We hlp you shop for your
+          preferred items and ship to your destination within 7 to 12 working
+          days.
+        </p>
+      </div>
+    </div>
+    <!--Services Part Ends Here-->
   </body>
 </html>
