Few changes in CSS

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <div class="cards">
       <div class="card1">
         <br />
-        <img class="card1img" src="Group.png" />
+        <img class="cardimg" src="Group.png" />
         <p class="def1">
           <br />
           Shipping to United States
@@ -206,7 +206,7 @@
       </div>
       <div class="card2">
         <br />
-        <img class="card2img" src="XMLID_644_.png" />
+        <img class="cardimg" src="XMLID_644_.png" />
         <div class="def2">
           <br />
           Shipping to Nigeria
@@ -219,7 +219,7 @@
       </div>
       <div class="card3">
         <br />
-        <img class="card3img" src="Group (1).png" />
+        <img class="cardimg" src="Group (1).png" />
         <div class="def3">
           <br />
           Procurement
