--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <script defer src="script.js"></script>
     <link
-      href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;500&display=swap"
+      href="https://fonts.googleapis.com/css?family=Rubik"
       rel="stylesheet"
     />
+    <style>
+      body {
+        font-family: "Rubik";
+        font-style: normal;
+      }
+    </style>
     <title>Figma Clone</title>
   </head>
   <body>
