Added shipment calender section

--- a/index.html
+++ b/index.html
@@ -235,5 +235,94 @@
       </div>
     </div>
     <!--Services Part Ends Here-->
+    <br><br>
+    <!--Shipment Calender-->
+    <div class="shipmentcalenderfull">
+      <div class="shipmentcalender">
+        <p class="bold">Shipment Calendar</p><br>
+        <p class="subject" style="width: 550px;">
+          Check out the dates we will be shipping from your City and send in your
+          items to our office.
+        </p>
+      </div>
+      <br><br>
+      <div class="fullcalender">
+        <div class="shipmentcolumn">
+          <div class="selecteddiv">Houston to Lagos</div>
+          <br />
+          <div class="remainingdiv">Minneapolis to Lagos</div>
+          <br />
+          <div class="remainingdiv">Lagos to USA</div>
+          <br />
+          <div class="remainingdiv">Minneapolis to Lagos</div>
+          <br />
+          <div class="remainingdiv">Lagos to USA</div>
+          <br />
+        </div>
+        <div class="sliderrectangle"></div>
+        <div class="calender">
+          <div class="month">MAY 2022</div>
+          <img class="leftbutton" src="leftbutton.jpg" alt="">
+          <img class="rightbutton" src="rightbutton.jpg" alt="">
+          <table class="calendertable">
+            <tr>
+              <th class="weekday">SUN</th>
+              <th class="weekday">MON</th>
+              <th class="weekday">TUE</th>
+              <th class="weekday">WED</th>
+              <th class="weekday">THU</th>
+              <th class="weekday">FRI</th>
+              <th class="weekday">SAT</th>
+            </tr>
+            <tr>
+              <td class="prevmonth">29</td>
+              <td class="prevmonth">30</td>
+              <td class="monthdate">1</td>
+              <td class="monthdate">2</td>
+              <td class="monthdate">3</td>
+              <td class="monthdate">4</td>
+              <td class="monthdate">5</td>
+            </tr>
+            <tr>
+              <td class="monthdate">6</td>
+              <td class="monthdate">7</td>
+              <td class="monthdate">8</td>
+              <td class="monthdate">9</td>
+              <td class="monthdate">10</td>
+              <td class="monthdate">11</td>
+              <td class="monthdate">12</td>
+            </tr>
+            <tr>
+              <td class="monthdate">13</td>
+              <td class="monthdate">14</td>
+              <td class="shipmentdate">15</td>
+              <td class="monthdate">16</td>
+              <td class="shipmentdate">17</td>
+              <td class="shipmentdate">18</td>
+              <td class="monthdate">19</td>
+            </tr>
+            <tr>
+              <td class="monthdate">20</td>
+              <td class="monthdate">21</td>
+              <td class="monthdate">21</td>
+              <td class="monthdate">23</td>
+              <td class="monthdate">24</td>
+              <td class="shipmentdate">25</td>
+              <td class="monthdate">26</td>
+            </tr>
+            <tr>
+              <td class="monthdate">27</td>
+              <td class="monthdate">28</td>
+              <td class="monthdate">29</td>
+              <td class="monthdate">30</td>
+              <td class="monthdate">31</td>
+              <td></td>
+              <td></td>
+            </tr>
+          </table>
+        </div>
+      </div>
+      </div>
+      <!--shipment calender end-->
   </body>
 </html>
