Added how it works section

--- a/index.html
+++ b/index.html
@@ -381,5 +381,77 @@
       </div>
     </div>
     <!-- shipment calender end-->
+    <!--How it works start-->
+    <div class="hiw">
+      <div class="hiwheading">How it works</div>
+      <br />
+      <div class="hiwsubheader">
+        The platform is hassle free and simple to use!
+      </div>
+      <div class="firstline">
+        <div class="part">
+          <div class="circle1"><p class="num1">1</p></div>
+          <div class="dashed1"></div>
+          <div class="circle2">
+            <img
+              src="checklist 1.png"
+              alt=""
+              style="position: relative; left: 30px; top: 30px"
+            />
+          </div>
+        </div>
+        <div class="hiwbox1">
+          <div class="hiwboxheader">Drop off your shipment</div>
+          <div class="hiwboxtext">
+            Send in your items to our office or contact us for a pick up.Fill
+            our form to document your details which will include recipient info
+            and destination of shipment.
+          </div>
+        </div>
+      </div>
+      <div class="line1"></div>
+      <div class="line2"></div>
+      <div class="secondline">
+        <div class="part">
+          <div class="circle3">
+            <img
+              src="boxes 1.png"
+              alt=""
+              style="position: relative; left: 30px; top: 30px"
+            />
+          </div>
+          <div class="dashed2"></div>
+          <div class="circle4"><p class="num2">2</p></div>
+        </div>
+        <div class="hiwbox2">
+          <div class="hiwboxheader">Pack & Ship</div>
+          <div class="hiwboxtext">
+            When your shipment arrives at our office, we will perform a final
+            inspection before sending it out to its final destination.
+          </div>
+        </div>
+      </div>
+      <div class="line3"></div>
+      <div class="thirdline">
+        <div class="part">
+          <div class="circle5"><p class="num3">3</p></div>
+          <div class="dashed3"></div>
+          <div class="circle6">
+            <img
+              src="location 1.png"
+              alt=""
+              style="position: relative; left: 30px; top: 30px"
+            />
+          </div>
+        </div>
+        <div class="hiwbox3">
+          <div class="hiwboxheader">Track Shipment</div>
+          <div class="hiwboxtext3">
+            We would send updates as they are available.
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--How it works ends-->
   </body>
 </html>
