Shipping pricing and footer part added

--- a/index.html
+++ b/index.html
@@ -453,5 +453,106 @@
       </div>
     </div>
     <!--How it works ends-->
+             <!-- Shipping pricing part starts -->
+  <br><br>
+  <div class="sp">
+   <div class="upper">
+ <div class="first">Shipping Pricing</div>
+ <br>
+ <div class="sec">Our shipping charges for the shipments</div>
+ </div>
+ <div class="main">
+ <div class="left">
+ <!-- <div class="intro"> -->
+     <div class="t1" style="text-align: Center;">Shipping from</div>
+     <div class="t2" style="text-align: Center;">Houston to Lagos</div>
+ <!-- </div> -->
+ <div class="t3" style="text-align: Center;">Price starting at <span style="font-weight: bold ; color: red">$5</span>
+ </div>
+ <div class="line"></div>
+ <div class="t4" style="text-align: Center;">Contact Details</div>
+ <div class="t5" style="text-align: center;">12763 Capricorn St Suite 900,Stafford, TX 77477</div>
+ <div class="t6">
+     <div class="icon"><img src="./whatsapp.png" alt="" class="src"></div>
+     <span class="no">+1(346)3819573</span>
+ </div>
+ </div>
+ <div class="middle">
+ <!-- <div class="intro"> -->
+     <div class="t1" style="text-align: Center;">Shipping from</div>
+ <div class="t2" style="text-align: Center;">Minneapolis to Lagos</div>
+ <!-- </div> -->
+ <div class="t3" style="text-align: Center;">Price starting at <span style="font-weight: 600 ; color: red">$6</span>
+ </div>
+ <div class="line"></div>
+ <div class="t4" style="text-align: Center;">Contact Details</div>
+ <div class="t5" style="text-align: Center;">3300 County Road 10 Brooklyn Center  MN 55429, Suite 206</div>
+ <div class="t6">
+     <div class="icon"><img src="./whatsapp.png" alt="" class="src"></div>
+     <div class="no">+1(832)9702740</div>
+ </div>
+ </div>
+ <div class="right">
+ <!-- <div class="intro"> -->
+     <div class="t1" style="text-align: Center;">Shipping from</div>
+     <div class="t2" style="text-align: Center;">Lagos to USA</div>
+ <!-- </div> -->
+ <div class="t3" style="text-align: Center;">Price starting at <span style="font-weight: 600 ; color: red">$4,000</span>
+ </div>
+ <div class="line"></div>
+ <div class="t4" style="text-align: Center;">Contact Details</div>
+     <div class="t5" style="text-align: Center;">Shop D213 Ogba Multiourpose Shopping Complex,Abiodun Jagun Street,Ogba, Lagos 25,Ajayi Road,Ogba,Lagos</div>
+     <div class="t6">
+     <div class="icon"><img src="./whatsapp.png" alt="" class="src"></div>
+     <div class="no">+2349132457112</div>
+ </div>
+ </div>
+ </div>
+ </div>
+ <!-- Shipping pricing part ends -->
+  <!-- lowest portion starts here.. -->
+  <div class="bottompart">
+   <div class="b_upper">
+       <div class="box1">
+           <div class="b_logo"><img src="./logo.png" alt="" class="src"></div>
+           <div class="text">Follow Us on</div>
+           <div class="icons">
+               <div class="icon1"><img src="./twitter_icn.png" alt="" class="src"></div>
+               <div class="icon2"><img src="./facebook_icn.png" alt=""></div>
+               <div class="icon3"><img src="./Instagram - Positive.svg" alt=""></div>
+               <div class="icon4"><img src="./linkedin_icn.png" alt=""></div>
+           </div>
+       </div>
+       <div class="box2">
+           <div class="t1">Home</div>
+           <div class="t2">About Us</div>
+           <div class="t2">Pricing</div>
+       </div>
+       <div class="box3">
+           <div class="t1">Quick Links</div>
+           <div class="t2">Services</div>
+           <div class="t2">Shipping Calender</div>
+           <div class="t2">How It Works</div>
+       </div>
+       <div class="box4">
+           <div class="t1">Reach Us At</div>
+           <div class="smallbox">
+               <div class="icon"><img src="./email (3) 1.png" alt=""></div>
+               <div class="text">supports@ssaflogistics.com</div>
+           </div>
+           <div class="smallbox">
+               <div class="icon"><img src="./phone-call (2) 1.png" alt=""></div>
+               <div class="text">+1 (346) 3819573</div>
+           </div>
+       </div>
+   </div>
+   <div class="middleline"></div>
+   <div class="b_lower">
+       <div class="copy1">&copy; SSAF. All Rights Reserved</div>
+       <div class="copy2">Terms & Conditions | &nbsp;Privacy Policy</div>
+   </div>
+ </div>
+ <!-- lowest portion ends here.. -->
+ 
   </body>
 </html>
